--- a/style/contact.css
+++ b/style/contact.css
@@ -6,7 +6,6 @@
   margin-top: 40px;
   box-sizing: border-box;
 }
-
 #contact .contentsWrap .leftContentsWrap {
   width: 42%;
   position: relative;
@@ -123,4 +122,67 @@
   top: 4px;
   border-left: 1px solid #d0d0d0;
   float: left;
+}
+
+/* 900px 이하 화면*/
+@media screen and (max-width: 900px) {
+  #contact .contentsWrap .leftContentsWrap {
+    width: 48%;
+  }
+  #contact .contentsWrap .rightContentsWrap {
+    width: 50%;
+  }
+}
+
+/* 769px 이하 화면*/
+@media screen and (max-width: 769px) {
+  #contact .contentsWrap {
+    justify-content: center;
+    flex-direction: column-reverse;
+    margin-top: 30px;
+  }
+  #contact .contentsWrap .leftContentsWrap {
+    width: 100%;
+  }
+  #contact .contentsWrap .leftContentsWrap ul {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto 0;
+  }
+  #contact .contentsWrap .rightContentsWrap {
+    width: 90%;
+    margin: 0 auto;
+  }
+  #contact .contentsWrap .leftContentsWrap ul li span {
+    font-size: 1.1rem;
+  }
+}
+
+/* 480px 이하 화면*/
+@media screen and (max-width: 480px) {
+  #contact .contentsWrap .rightContentsWrap {
+    width: 100%;
+    margin: 0 auto;
+  }
+  #contact .contentsWrap .leftContentsWrap {
+    width: 100%;
+    text-align: center;
+  }
+  #contact .contentsWrap .leftContentsWrap ul li h4 {
+    display: block;
+  }
+  #contact .contentsWrap .leftContentsWrap ul li h4::before {
+    display: none;
+  }
+}
+
+/* 380px 이하 화면*/
+@media screen and (max-width: 380px) {
+  #map .mapWrap {
+    height: 300px;
+  }
+  #map .kakaotext {
+    display: none;
+  }
 }
