--- a/style/navBar.css
+++ b/style/navBar.css
@@ -2,18 +2,24 @@
   position: relative;
   width: 238px;
   height: 70px;
+  overflow: hidden;
 }
 #navBar .logo a {
   display: block;
   width: 100%;
   height: 100%;
   text-align: center;
+  text-indent: -2000px;
   line-height: 70px;
   text-decoration: none;
   color: #517C5A;
   font-size: 24px;
   font-weight: 700;
-  background-color: #fff;
+  background-image: url(../img/headerLogo.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* background-color: #fff; */
 }
 #navBar .menuWrap {
   position: relative;
@@ -104,7 +110,7 @@
     overflow: initial;
   }
   #navBar .container {
-    height: 70px;
+    /* height: 70px; */
     overflow: hidden;
   }
   #navBar .container .logo {
